--- a/webComps/package.json
+++ b/webComps/package.json
@@ -23,8 +23,7 @@
     "create:comp": "stencil generate"
   },
   "dependencies": {
-    "@stencil/core": "^2.13.0",
-    "react": "^18.2.0"
+    "@stencil/core": "^2.13.0"
   },
   "devDependencies": {
     "@types/jest": "^27.0.3",
