--- a/package.json
+++ b/package.json
@@ -10,8 +10,7 @@
   "license": "ISC",
   "private": true,
   "workspaces": [
-    "docs",
-    "webComps"
+    "packages/*"
   ],
   "devDependencies": {
     "clean-webpack-plugin": "^4.0.0",
