--- a/packages/docs/package.json
+++ b/packages/docs/package.json
@@ -43,6 +43,7 @@
     "gh-pages": "^3.0.0",
     "lint-staged": "^10.0.7",
     "prettier": "^2.2.1",
-    "yorkie": "^2.0.0"
+    "yorkie": "^2.0.0",
+    "moderate-webcomp-starter":"0.6.1"
   }
 }
